--- a/api/Gemfile
+++ b/api/Gemfile
@@ -1,15 +1,14 @@
 source 'https://rubygems.org'
 
-gem 'rails', '3.2.11'
+ruby "2.1.2"
 
-# Bundle edge Rails instead:
-# gem 'rails', :git => 'git://github.com/rails/rails.git'
-
+gem 'rails', '4.1.0'
 
 gem 'rails-api'
 
-gem 'sqlite3'
+gem 'spring', :group => :development
 
+gem 'sqlite3'
 
 
 
