--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 .DS_STORE
+.vagrant
 
 ## Environment normalisation:
 /.bundle
