--- a/api/Gemfile
+++ b/api/Gemfile
@@ -12,7 +12,7 @@ gem 'sqlite3'
 
 gem 'devise'
 
-
+gem "active_model_serializers"
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.1.2'
