--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,8 @@
     "angular-animate": "~1.3.0",
     "angular-touch": "~1.3.0",
     "angular-route": "~1.3.0",
-    "foundation": "zurb/bower-foundation#~5.3.1"
+    "foundation": "zurb/bower-foundation#~5.3.1",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
