--- a/api/Gemfile
+++ b/api/Gemfile
@@ -31,6 +31,10 @@ gem 'devise'
 
 gem "active_model_serializers"
 
+gem 'doorkeeper'
+
+gem 'byebug'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
